--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -16,6 +16,6 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:textSize="50dp"
-            android:text="hao3"/>
+            android:text="ni3hao3ma0"/>
 
 </android.support.constraint.ConstraintLayout>
